# matchmaking

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
makefiles/: format.mk  lint.mk  mypy.mk  ruff.mk
src/: config.py  data.py  main.py  schema.py  utils.py
src/task1/: __init__.py  match_players.py
src/task2/: __init__.py  match_players.py
src/task3/: match_players.py
